RESOLVED FIXED278129
REGRESSION (277282@main): Uncommitted IME text fails to render on x86_64 Macs only
https://bugs.webkit.org/show_bug.cgi?id=278129
Summary REGRESSION (277282@main): Uncommitted IME text fails to render on x86_64 Macs...
Wenson Hsieh
Reported 2024-08-14 15:45:03 PDT
Attachments
Wenson Hsieh
Comment 1 2024-08-14 15:51:57 PDT
EWS
Comment 2 2024-08-14 16:41:37 PDT
Committed 282265@main (f79866536e1d): <https://commits.webkit.org/282265@main> Reviewed commits have been landed. Closing PR #32216 and removing active labels.
EWS
Comment 3 2024-08-15 13:53:33 PDT
Committed 282308@main (80a13b46642d): <https://commits.webkit.org/282308@main> Reviewed commits have been landed. Closing PR #32257 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.