REGRESSION (277282@main): Uncommitted IME text fails to render on x86_64 Macs only https://bugs.webkit.org/show_bug.cgi?id=278129 rdar://133304088

Reviewed by Tim Horton and Richard Robinson.

Make sure that the value of `result` is initialized to `NO` in `WebViewImpl::setMarkedText`, so that
we don't erroneously try to render inline predictions when using marked text for regular IME (i.e.
Chinese, Japanese input).

* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::setMarkedText):

Canonical link: https://commits.webkit.org/282265@main